force-app/main/default/objects/Integration_Retry_Config__c/Integration_Retry_Config__c.object-meta.xml
<CustomObject>
    <label>Integration Retry Config</label>
    <nameField>
        <displayFormat>INT-RET-{0000}</displayFormat>
        <label>Integration Retry Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Retry Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>