force-app/main/default/objects/Integration_Retry_Config__c/fields/Backoff_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Backoff_Multiplier__c</fullName>
    <defaultValue>2.0</defaultValue>
    <description>Exponential backoff multiplier</description>
    <label>Backoff Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>