force-app/main/default/objects/Integration_Retry_Config__c/fields/Dead_Letter_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Dead_Letter_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Dead Letter Enabled</label>
    <type>Checkbox</type>
</CustomField>