force-app/main/default/objects/Integration_Retry_Config__c/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Retries</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>