force-app/main/default/objects/Integration_Retry_Config__c/fields/Max_Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Interval__c</fullName>
    <defaultValue>3600</defaultValue>
    <description>Maximum retry interval cap in seconds</description>
    <label>Max Retry Interval</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>