force-app/main/default/objects/Integration_Retry_Config__c/fields/Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Initial retry interval in seconds</description>
    <label>Retry Interval</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>