force-app/main/default/objects/Integration_Retry_Config__c/fields/Retry_On_Status_Codes__c.field-meta.xml
<CustomField>
    <fullName>Retry_On_Status_Codes__c</fullName>
    <defaultValue>&quot;408,429,500,502,503,504&quot;</defaultValue>
    <description>Comma-separated HTTP status codes to retry on</description>
    <label>Retry On Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>